2020-02-04  Ross Kirsling  <ross.kirsling@sony.com>

        [CMake] Add Cairo::Cairo target
        https://bugs.webkit.org/show_bug.cgi?id=207159

        Reviewed by Konstantin Tokarev.

        * DumpRenderTree/PlatformWin.cmake:
        * ImageDiff/Cairo.cmake:
        * TestWebKitAPI/PlatformWPE.cmake:
        * TestWebKitAPI/PlatformWin.cmake:
        * TestWebKitAPI/glib/CMakeLists.txt:
        * WebKitTestRunner/PlatformGTK.cmake:
        * WebKitTestRunner/PlatformWPE.cmake:
        * WebKitTestRunner/PlatformWin.cmake:
        * wpe/backends/CMakeLists.txt:

2020-02-03  Jiewen Tan  <jiewen_tan@apple.com>

        Pass a hint from the extension to decidePolicyForSOAuthorizationLoadWithCurrentPolicy
        https://bugs.webkit.org/show_bug.cgi?id=207079
        <rdar://problem/48290464>

        Reviewed by Brent Fulgham.

        * TestWebKitAPI/Tests/WebKitCocoa/TestSOAuthorization.mm:
        (-[TestSOAuthorizationDelegate _webView:decidePolicyForSOAuthorizationLoadWithCurrentPolicy:forExtension:completionHandler:]):
        (overrideGetAuthorizationHintsWithURL):
        (TestWebKitAPI::TEST):

2020-02-03  Jonathan Bedard  <jbedard@apple.com>

        results.webkit.org: Support jsc stress tests
        https://bugs.webkit.org/show_bug.cgi?id=204096

        Rubber-stamped by Aakash Jain.

        * Scripts/run-javascriptcore-tests:
        (runJSCStressTests): Add pass and failures to reported results.

2020-02-03  Alexey Shvayka  <shvaikalesh@gmail.com>

        Make Bugzilla._find_select_element_for_flag more robust
        https://bugs.webkit.org/show_bug.cgi?id=207148

        Reviewed by Jonathan Bedard.

        This patch resolves two FIXMEs:
        1. _find_select_element_for_flag() is now used in _fill_attachment_form() method.
        2. _find_select_element_for_flag() now does not rely on order of <select> elements.

        * Scripts/webkitpy/common/net/bugzilla/bugzilla.py:
        (Bugzilla._fill_attachment_form):