@@ -1,3 +1,15 @@
+2020-02-04  Aakash Jain  <aakash_jain@apple.com>
+
+        [EWS] Do not remove webkitpy prefix from test failures
+        https://bugs.webkit.org/show_bug.cgi?id=207206
+
+        Reviewed by Jonathan Bedard.
+
+        * BuildSlaveSupport/ews-build/steps.py:
+        (WebKitPyTest.getResultSummary): Do not remove 'webkitpy' from test name. Also handled the
+        case when json output doesn't have failures/errors key.
+        * BuildSlaveSupport/ews-build/steps_unittest.py: Added unit-tests.
+
 2020-02-04  Ross Kirsling  <ross.kirsling@sony.com>
 
         [CMake] Add Cairo::Cairo target
